package schemas

type User struct {
	ID       string
	Username string
	Password string
	Email    string
}
